# polygen

./: biome.json
apps/example/: metro.config.js
test-runner/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
test-runner/cmake/: Polygen.cmake  RNCodeGen.cmake
test-runner/fakern/: CMakeLists.txt  DummyCallInvoker.cpp  DummyCallInvoker.hpp  DummyRuntime.cpp  DummyRuntime.h
test-runner/fakern/ReactCommon/: CallInvoker.h  SchedulerPriority.h  TurboModule.cpp  TurboModule.h
test-runner/shell/: CMakeLists.txt  main.cpp
test-runner/tests/: CMakeLists.txt
test-runner/tests/fib_with_host_fn/: CMakeLists.txt  polygen.config.mjs
test-runner/vcpkg-ports/hermes/: HermesConfig.cmake  vcpkg.json
